# Sum_24_Michael_Calle

./: .gitignore  CMakeLists.txt  Sum_24_Michael_Calle.sln  unique.txt
Orca/: CMakeLists.txt  Camera.cpp  Camera.h  Events.cpp  Events.h  Image.cpp  Image.h  ImageOpenGL.cpp  KeyBuffer.cpp  KeyBuffer.h  Map.cpp  Map.h  Orca.vcxproj  Orca.vcxproj.filters  OrcaApp.cpp  OrcaApp.h  OrcaKeys.h  OrcaWindow.cpp  OrcaWindow.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shaders.cpp  Shaders.h  ShadersImplementation.h  ShadersOpenGL.cpp  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h  pch.h
Orca/Assets/Shaders/: defaultFragment.glsl  defaultVertex.glsl
Orca/include/: ImageImplementation.h  Orca.h  Shaders.h
Sum_24_Michael_Calle/: CMakeLists.txt  Sum_24_Michael_Calle.vcxproj  main.cpp
glad/: CMakeLists.txt  glad.vcxproj  glad.vcxproj.filters
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: CMakeLists.txt  stbi.vcxproj  stbi.vcxproj.filters
